# Brik

./: .clang-format  CMakeLists.txt  EXERCICES.md  LICENSE.md  README.md
assets/: map.brik
src/: Ball.cpp  Ball.h  Breakable.cpp  Breakable.h  Brik.cpp  EventManager.cpp  EventManager.h  Map.cpp  Map.h  Slider.cpp  Slider.h  main.cpp
src/Physics/: Bounce.cpp  Bounce.h  Geometry.h  Intersect.cpp  Intersect.h
